update product swagger
